--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "sass": "^1.54.8"
   },
   "devDependencies": {
