--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.3.1",
-    "react-scrollspy-nav": "^1.3.0",
     "sass": "^1.54.8"
   },
   "devDependencies": {
