--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "prettier:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "datocms-structured-text-utils": "^2.0.4",
     "loadsh": "^0.0.4",
     "next": "^13.4.2",
     "react": "^18.2.0",
+    "react-datocms": "^4.1.3",
     "react-dom": "^18.2.0",
     "sass": "^1.54.8"
   },
