--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "datocms-structured-text-utils": "^2.0.4",
+    "gsap": "^3.12.2",
     "loadsh": "^0.0.4",
     "next": "^13.4.2",
     "react": "^18.2.0",
